add code to division

--- a/src/app/ui/ui.component.css
+++ b/src/app/ui/ui.component.css
@@ -29,8 +29,16 @@
     cursor: pointer;
     color: blue;
 }
+
 .substraction-button {
     cursor: pointer;
     color: green;
 }
+
+.division-button {
+    cursor: pointer;
+    color: rgba(190, 16, 123, 0.932);
+    font-size: 1.4em;
+}
+
 
