--- a/src/app/ui/ui.component.html
+++ b/src/app/ui/ui.component.html
@@ -22,6 +22,8 @@
 
     <i class="multiplication-button" (click)="multiplication()"> x </i>
 
+    <i class="exp-button" (click)="exp()"> ^ </i>
+
 </div>
 
 <span class="result">{{ result }}</span>
