add code to sqr

--- a/src/app/ui/ui.component.html
+++ b/src/app/ui/ui.component.html
@@ -24,6 +24,8 @@
 
     <i class="exp-button" (click)="exp()"> ^ </i>
 
+    <i class="sqr-button" (click)="sqr()"> ^2 </i>
+
 </div>
 
 <span class="result">{{ result }}</span>
