add code to sqrt

--- a/src/app/ui/ui.component.html
+++ b/src/app/ui/ui.component.html
@@ -26,6 +26,8 @@
 
     <i class="sqr-button" (click)="sqr()"> ^2 </i>
 
+    <i class="sqrt-button" (click)="sqrt()"> √ </i>
+
 </div>
 
 <span class="result">{{ result }}</span>
